--- a/www/index.html
+++ b/www/index.html
@@ -1,19 +1,27 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
 
-    <link href="lib/ionic/css/ionic.css" rel="stylesheet">
-    <script src="lib/ionic/js/ionic.bundle.js"></script>
 
-    <!-- cordova script (this will be a 404 during development) -->
+     
+    <link href="scss/form.scss" rel="stylesheet">
+    <link href="scss/styles.scss" rel="stylesheet">
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
 
-    <!-- IF using Sass (run gulp sass first), then uncomment below and remove the CSS includes above
-    <link href="css/ionic.app.css" rel="stylesheet">
-    -->
+    <!-- compiled css output -->
+      <link href="css/ionic.app.css" rel="stylesheet">
+      <script src="lib/angular-messages/angular-messages.min.js"></script>
+      <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+      <script src="lib/parse-angular-patch/dist/parse-angular.js"></script>
+      <script src="lib/moment/moment.js"></script>
+      <script src="lib/angular-moment/angular-moment.js"></script>
+      <script src="https://code.angularjs.org/1.3.0-rc.2/angular-messages.js"></script>
+      <script src="https://code.angularjs.org/1.3.0-rc.2/angular-route.js"></script>
+      <script src="https://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
@@ -33,3 +41,6 @@
 </div>
   </body>
 </html>
+
+
+
