--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,9 @@
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
+    <script src="//www.parsecdn.com/js/parse-1.6.14.min.js"></script>
+    <!--<script src="js/controllers/signUpControoler.js"></script>-->
+    <!--<script src="js/controllers/logInController.js"></script>-->
 
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
