--- a/www/index.html
+++ b/www/index.html
@@ -11,15 +11,18 @@
     <script src="cordova.js"></script>
 
     <!-- compiled css output -->
+      <!-- Firebase -->
+      <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+      <!-- AngularFire -->
+      <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
       <link href="css/ionic.app.css" rel="stylesheet">
       <script src="lib/angular-messages/angular-messages.min.js"></script>
       <script src="lib/ngCordova/dist/ng-cordova.js"></script>
-      <script src="lib/parse-angular-patch/dist/parse-angular.js"></script>
       <script src="lib/moment/moment.js"></script>
       <script src="lib/angular-moment/angular-moment.js"></script>
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-messages.js"></script>
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-route.js"></script>
-      <script src="https://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
+
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
