--- a/www/index.html
+++ b/www/index.html
@@ -19,16 +19,18 @@
       <script src="lib/angular-moment/angular-moment.js"></script>
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-messages.js"></script>
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-route.js"></script>
-      <script src="https://www.parsecdn.com/js/parse-1.5.0.min.js"></script>
+      <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
+
 
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
-    <script src="//www.parsecdn.com/js/parse-1.6.14.min.js"></script>
-    <script src="js/controllers/signUpControoler.js"></script>
-    <script src="js/controllers/logInController.js"></script>
+    <!--<script src="js/controllers/signUpControoler.js"></script>-->
+    <!--<script src="js/controllers/logInController.js"></script>-->
+    <!--<script src="js/controllers/addNutritionController.js"></script>-->
+    <!--<script src="js/Serivces/nutritionService.js"></script>-->
 
   </head>
   <body ng-app="app" animation="slide-left-right-ios7">
