--- a/www/index.html
+++ b/www/index.html
@@ -27,6 +27,8 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/routes.js"></script>
+      <script src="angular.js"></script>
+    <script src="angular-route.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
     <script src="//www.parsecdn.com/js/parse-1.6.14.min.js"></script>
