--- a/www/index.html
+++ b/www/index.html
@@ -8,16 +8,14 @@
     <link href="scss/form.scss" rel="stylesheet">
     <link href="scss/styles.scss" rel="stylesheet">
     <script src="lib/ionic/js/ionic.bundle.js"></script>
-    <script src="cordova.js"></script>
 
-    <!-- compiled css output -->
       <!-- Firebase -->
       <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
       <!-- AngularFire -->
       <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
       <link href="css/ionic.app.css" rel="stylesheet">
       <script src="lib/angular-messages/angular-messages.min.js"></script>
-      <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+
       <script src="lib/moment/moment.js"></script>
       <script src="lib/angular-moment/angular-moment.js"></script>
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-messages.js"></script>
@@ -25,6 +23,10 @@
       <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
       <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
 
+    <script src="cordova.js"></script>
+
+    <script src="lib/ngCordova/dist/ng-cordova.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
 
     <script src="js/app.js"></script>
