--- a/www/index.html
+++ b/www/index.html
@@ -20,6 +20,8 @@
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-messages.js"></script>
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-route.js"></script>
       <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
+      <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+
 
 
     <script src="js/app.js"></script>
