--- a/www/index.html
+++ b/www/index.html
@@ -10,7 +10,7 @@
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
       <!-- Firebase -->
-      <script src="https://cdn.firebase.com/js/client/2.2.4/firebase.js"></script>
+      <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
       <!-- AngularFire -->
       <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
       <link href="css/ionic.app.css" rel="stylesheet">
@@ -20,8 +20,9 @@
       <script src="lib/angular-moment/angular-moment.js"></script>
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-messages.js"></script>
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-route.js"></script>
-      <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
-      <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
+      <link rel="stylesheet" href="angularjs-datetime-picker.css" />
+      <script src="angularjs-datetime-picker.js"></script>
+
 
     <script src="cordova.js"></script>
 
