Barcode Scanner. Cordova plugin required.

--- a/www/index.html
+++ b/www/index.html
@@ -23,7 +23,7 @@
       <link rel="stylesheet" href="angularjs-datetime-picker.css" />
       <script src="angularjs-datetime-picker.js"></script>
 
-
+    <script src="js/ng-cordova.min.js"></script>
     <script src="cordova.js"></script>
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
