All code for addMeal. base for addIngredient

--- a/www/index.html
+++ b/www/index.html
@@ -14,15 +14,14 @@
       <!-- AngularFire -->
       <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
       <link href="css/ionic.app.css" rel="stylesheet">
+      <script src="https://code.angularjs.org/1.3.0-rc.2/angular.js"></script>
       <script src="lib/angular-messages/angular-messages.min.js"></script>
 
       <script src="lib/moment/moment.js"></script>
       <script src="lib/angular-moment/angular-moment.js"></script>
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-messages.js"></script>
       <script src="https://code.angularjs.org/1.3.0-rc.2/angular-route.js"></script>
-      <link rel="stylesheet" href="angularjs-datetime-picker.css" />
-      <script src="angularjs-datetime-picker.js"></script>
-
+      <script src="lib/angular-native-datepicker/angular-datepicker.js"></script>
 
     <script src="cordova.js"></script>
 
