API Search Integration

--- a/www/index.html
+++ b/www/index.html
@@ -34,6 +34,9 @@
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
 
+    <script src="lib/ion-autocomplete/dist/ion-autocomplete.js"></script>
+    <link href="lib/ion-autocomplete/dist/ion-autocomplete.css" rel="stylesheet">
+
     <link rel="stylesheet" type="text/css" media="screen"
           href="lib/json-formatter/dist/json-formatter.min.css" />
     <script src="lib/json-formatter/dist/json-formatter.min.js"></script>
