--- a/www/index.html
+++ b/www/index.html
@@ -43,6 +43,7 @@
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
+    <script type="text/javascript" src="js/SocialSharing.js"></script>
     <!--<script src="js/controllers/signUpController.js"></script>-->
     <!--<script src="js/controllers/logInController.js"></script>-->
     <!--<script src="js/controllers/addNutritionController.js"></script>-->
@@ -51,7 +52,7 @@
 
 </head>
 <body ng-app="app" animation="slide-left-right-ios7">
-    <div>
+    <div>   
         <div>
             <ion-nav-bar class="bar-stable">
                 <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
