--- a/www/index.html
+++ b/www/index.html
@@ -43,7 +43,10 @@
     <script src="js/routes.js"></script>
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
-    <script type="text/javascript" src="js/SocialSharing.js"></script>
+
+
+    <script src="lib/angles/angles.js"></script>
+    <!---<script type="text/javascript" src="js/SocialSharing.js"></script>-->
     <!--<script src="js/controllers/signUpController.js"></script>-->
     <!--<script src="js/controllers/logInController.js"></script>-->
     <!--<script src="js/controllers/addNutritionController.js"></script>-->
