--- a/www/index.html
+++ b/www/index.html
@@ -7,7 +7,7 @@
 
     <link href="scss/form.scss" rel="stylesheet">
     <link href="scss/styles.scss" rel="stylesheet">
-    
+
     <script src="lib/underscore/underscore.js"></script>
     <script src="lib/ionic/js/ionic.bundle.js"></script>
 
@@ -18,19 +18,25 @@
     <script src="https://code.angularjs.org/1.3.0-rc.2/angular-route.js"></script>
     <script src="lib/angular-nutritionix-api/angular-nutritionix-api.js"></script>
     <script src="lib/angular-nutritionix-api/angular-nutritionix-api.min.js"></script>
-   
+  
     <!-- Firebase -->
     <script src="https://cdn.firebase.com/js/client/2.4.0/firebase.js"></script>
     <!-- AngularFire -->
     <script src="https://cdn.firebase.com/libs/angularfire/1.1.3/angularfire.min.js"></script>
 
     <link href="css/ionic.app.css" rel="stylesheet">
-   
+
     <script src="lib/moment/moment.js"></script>
 
     <script src="lib/ngCordova/dist/ng-cordova.js"></script>
     <script src="lib/ngCordova/dist/ng-cordova.min.js"></script>
+    <script src="lib/ngCordova/dist/ng-cordova-mocks.js"></script>
+    <script src="lib/ionic/js/ionic.bundle.js"></script>
     <script src="cordova.js"></script>
+
+
+    <!--<script src="lib/BarcodeScanner/www/barcodescanner.js"></script>-->
+
 
     <script src="lib/ion-autocomplete/dist/ion-autocomplete.js"></script>
     <link href="lib/ion-autocomplete/dist/ion-autocomplete.css" rel="stylesheet">
@@ -44,18 +50,15 @@
     <script src="js/services.js"></script>
     <script src="js/directives.js"></script>
 
-
-    <script src="lib/angles/angles.js"></script>
     <!---<script type="text/javascript" src="js/SocialSharing.js"></script>-->
     <!--<script src="js/controllers/signUpController.js"></script>-->
     <!--<script src="js/controllers/logInController.js"></script>-->
     <!--<script src="js/controllers/addNutritionController.js"></script>-->
     <!--<script src="js/Serivces/nutritionService.js"></script>-->
-
-
+    <!-- <meta http-equiv="Content-Security-Policy" content="default-src *; style-src 'self' 'unsafe-inline'; script-src 'self' 'unsafe-inline' 'unsafe-eval'">-->
 </head>
 <body ng-app="app" animation="slide-left-right-ios7">
-    <div>   
+    <div>
         <div>
             <ion-nav-bar class="bar-stable">
                 <ion-nav-back-button class="button-icon icon ion-ios-arrow-back">Back</ion-nav-back-button>
