testing email data

--- a/www/index.html
+++ b/www/index.html
@@ -54,6 +54,7 @@
     <!---<script type="text/javascript" src="js/SocialSharing.js"></script>-->
     <script type="text/javascript" src="js/SocialSharing.js"></script>
     <script src="lib/json-human/src/json.human.js"></script>
+    <script language="JavaScript" type="text/javascript" src="lib/jquery/dist/jquery.js"></script>
     <!--<script src="lib/json-human/json-human.css"></script>-->
     <!--<script src="js/controllers/signUpController.js"></script>-->
     <!--<script src="js/controllers/logInController.js"></script>-->
