pulling latest from main branch

--- a/www/index.html
+++ b/www/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
     <title></title>
+    <meta http-equiv="Content-Security-Policy" />
 
     <link href="scss/form.scss" rel="stylesheet">
     <link href="scss/styles.scss" rel="stylesheet">
